# rust-federated-schema-graphql

gateway/: Cargo.toml  index.js  package.json
posts/: Cargo.toml
posts/src/: main.rs  models.rs
users/: Cargo.toml
users/src/: main.rs  models.rs
