[package]
name = "users"
version = "0.1.0"
authors = ["José Oliveira <zeehtecnologia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.16"
async-graphql-warp = "1.4.2"
tokio = { version = "1.8", features = ["macros"] }
warp = "0.2"